--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
     <head>
         {% include 'components/head.html' %}
-        <meta property="description" content="Maior site de notícias para gamers e e-esports" />
+        <meta property="description" content="Site de notícias para gamers e e-esports" />
+        <meta property="og:description" content="Site de notícias para gamers e e-esports">
         <meta property="og:image" content="{{ url_for('static', filename='favicon_2.png') }}">
         <meta property="twitter:description" content="Maior site de notícias para gamers e e-esports" />
         <meta property="twitter:image" content="{{ url_for('static', filename='favicon_2.png') }}">
