--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -2,14 +2,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:ttl" content="600" />
+<meta property="og:title" content="{{ title }}">
 <meta property="og:site_name" content="mais gamer" />
 <meta property="twitter:site" content="@maisgamernews" />
 <meta property="twitter:card" content="summary" />
 <meta property="twitter:title" content="{{ title }}">
 <meta property="og:type" content="website">
 <meta property="og:url" content="" class="page-url">
-<meta property="og:image:width" content="256">
-<meta property="og:image:height" content="256">
+<meta property="og:image:width" content="1400">
+<meta property="og:image:height" content="700">
+<meta property="og:locale" content="pt_BR">
 <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon_2.png') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
