--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -3,9 +3,12 @@
     <head>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/notice.css') }}">
         <meta property="description" content="{{ notice.subtitle }}" />
+        <meta property="og:description" content="{{ notice.subtitle }}">
         <meta property="og:image" content="{{ notice.cover_image }}" />
         <meta property="twitter:description" content="{{ notice.subtitle }}" class="twitter-description"/>
         <meta property="twitter:image" content="{{ notice.cover_image }}" />
+        <meta property="article:published_time" content="{{ notice.addedAt }}">
+        <meta property="article:modified_time" content="{{ notice.addedAt }}">
         {% include 'components/head.html' %}
     </head>
     <body>
