--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -18,12 +18,13 @@
                 <div class="notice">
                     <div class="notice-header">
                         <h1 class="header-title">{{ notice.title }}</h1>
+                        <p class="notice-subtitle">{{ notice.subtitle }}</p>
                         {% if game.id != 0 %}
                             <div class="game">
                                 <span class="game-name">{{ game.name }}</span>
                             </div>
                         {% endif %}
-                        <span class="posted-by">{{ user.name + ' ' + user.surname + ' - @' +user.username}}</span>
+                        <span class="posted-by">Por {{ user.name + ' ' + user.surname }}</span>
                         <div class="notice-options">
                             <time class="addedAt" datetime="{{ notice.addedAt }}"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</time>
                             <div class="share">
@@ -40,7 +41,6 @@
                             </div>
                         </div>
                     </div>
-                    <p class="notice-subtitle">{{ notice.subtitle }}</p>
                     <div class="notice-body">
                         {% for content in notice_content %}
                             {% if content.type == 'IMG' %}
@@ -70,7 +70,7 @@
                         {% endfor %}
                     </div>
                 </div>
+              </div>
             {% include 'components/footer.html' %}
-        </div>
     </body>
 </html>
